oop_mro/tests/trybuild/fail_concrete_inherits_abstract.stderr
error: concrete class `StillAbstract` must implement abstract method(s) `area`; declare `abstract class StillAbstract` to keep it abstract
 --> tests/trybuild/fail_concrete_inherits_abstract.rs:8:11
  |
8 |     class StillAbstract: AbstractShape {}
  |           ^^^^^^^^^^^^^
