oop_mro/tests/trybuild/fail_concrete_inherits_abstract.rs
use oop_mro::prelude::*;

oop_class! {
    abstract class AbstractShape {
        abstract virtual fn area(&self) -> usize;
    }

    class StillAbstract: AbstractShape {}
}

fn main() {}
